Add recipe list for potato salad section

--- a/recipes/potatoSalad.html
+++ b/recipes/potatoSalad.html
@@ -14,7 +14,16 @@
   <h2>Description</h2>
   <h3>Ingredients</h3>
   <ul>
-    <li></li>
+    <li>5 potatoes</li>
+    <li>3 eggs</li>
+    <li>1 cup chopped celery</li>
+    <li>&frac12; chopped onion</li>
+    <li>&frac12; sweet pickle relish</li>
+    <li>&frac14; mayonnaise</li>
+    <li>1 tablespoon prepared mustard</li>
+    <li>&frac14; teaspoon garlic salt</li>
+    <li>&frac14; teaspoon celery salt</li>
+    <li>ground black pepper to taste</li>
   </ul>
 </body>
 
