--- a/recipes/potatoSalad.html
+++ b/recipes/potatoSalad.html
@@ -34,7 +34,26 @@
     <li>Combine the potatoes, eggs, celery, onion, relish, mayonnaise, mustard, garlic salt, celery salt, and pepper in
       a large bowl. Mix together well and refrigerate until chilled.</li>
   </ol>
-
+  <h1>Crispy Baked Chicken Legs</h1>
+  <img src="crispyBakedChickenLegs.jpeg" alt="Mouth watering crispy baked chicken legs" height="400" width="600">
+  <h2>Description</h2>
+  <h3>Ingredients</h3>
+  <ul>
+    <li>4 pounds chicken legs</li>
+    <li>2 tablespoons chili powder</li>
+    <li>1 tablespoon garlic powder</li>
+    <li>1 teaspoon cayenne pepper</li>
+    <li>1 teaspoon Himalayan pink salt</li>
+    <li>2 tablespoons tamari</li>
+  </ul>
+  <h3>Steps</h3>
+  <ol>
+    <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
+    <li>Place chicken legs in a large bowl. Spread chili powder, garlic powder, cayenne, and salt onto the chicken; pour
+      sauce over top. Mix thoroughly and transfer to a baking sheet.</li>
+    <li>Bake, uncovered, in the preheated oven until chicken is no longer pink at the bone and the juices run clear, 45
+      to 50 minutes. An instant-read thermometer inserted near the bone should read 165 degrees F (74 degrees C).</li>
+  </ol>
 </body>
 
 </html>
