--- a/recipes/potatoSalad.html
+++ b/recipes/potatoSalad.html
@@ -12,7 +12,7 @@
   <h1>Old Fashioned Potato Salad</h1>
   <img src="potatoSalad.jpeg" alt="A delicious old fashioned potato salad" height="400" width="400">
   <h2>Description</h2>
-  <h3>Ingredients</h3>
+  <h2>Ingredients</h2>
   <ul>
     <li>5 potatoes</li>
     <li>3 eggs</li>
@@ -25,19 +25,21 @@
     <li>&frac14; teaspoon celery salt</li>
     <li>ground black pepper to taste</li>
   </ul>
-  <h3>Steps</h3>
+  <h2>Steps</h2>
   <ol>
     <li>Bring a large pot of salted water to a boil. Add potatoes and cook until tender but still firm, about 15
       minutes. Drain, cool, peel and chop.</li>
     <li>While potatoes cook, place eggs in a saucepan and cover with cold water. Bring water to a boil; cover, remove
-      from heat, and let eggs stand in hot water for 10 to 12 minutes. Remove from hot water, cool, peel and chop.</li>
-    <li>Combine the potatoes, eggs, celery, onion, relish, mayonnaise, mustard, garlic salt, celery salt, and pepper in
+      from heat, and let eggs stand in hot water for 10 to 12 minutes. Remove from hot water, cool, peel and chop.
+    </li>
+    <li>Combine the potatoes, eggs, celery, onion, relish, mayonnaise, mustard, garlic salt, celery salt, and pepper
+      in
       a large bowl. Mix together well and refrigerate until chilled.</li>
   </ol>
   <h1>Crispy Baked Chicken Legs</h1>
   <img src="crispyBakedChickenLegs.jpeg" alt="Mouth watering crispy baked chicken legs" height="400" width="600">
   <h2>Description</h2>
-  <h3>Ingredients</h3>
+  <h2>Ingredients</h2>
   <ul>
     <li>4 pounds chicken legs</li>
     <li>2 tablespoons chili powder</li>
@@ -46,12 +48,14 @@
     <li>1 teaspoon Himalayan pink salt</li>
     <li>2 tablespoons tamari</li>
   </ul>
-  <h3>Steps</h3>
+  <h2>Steps</h2>
   <ol>
     <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
-    <li>Place chicken legs in a large bowl. Spread chili powder, garlic powder, cayenne, and salt onto the chicken; pour
+    <li>Place chicken legs in a large bowl. Spread chili powder, garlic powder, cayenne, and salt onto the chicken;
+      pour
       sauce over top. Mix thoroughly and transfer to a baking sheet.</li>
-    <li>Bake, uncovered, in the preheated oven until chicken is no longer pink at the bone and the juices run clear, 45
+    <li>Bake, uncovered, in the preheated oven until chicken is no longer pink at the bone and the juices run clear,
+      45
       to 50 minutes. An instant-read thermometer inserted near the bone should read 165 degrees F (74 degrees C).</li>
   </ol>
 </body>
