Add descriptions for all current recipes

--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -12,7 +12,12 @@
   <h1>Old Fashioned Potato Salad</h1>
   <img src="potatoSalad.jpeg" alt="A delicious old fashioned potato salad" height="400" width="400">
   <h2>Description</h2>
-
+  <p>There are many ways to make potato salad, but if you're looking for a traditional, mayonnaise-based potato salad
+    made with hard-boiled eggs, celery, and a little pickle relish for zing, you've landed on the right recipe. With
+    more than one thousand ratings and nearly a thousand reviews from our Allrecipes community of home cooks, this
+    recipe for Old-Fashioned Potato salad is a proven winner. And it's so easy to make using everyday ingredients. I'll
+    show you how to make Old-Fashioned Potato salad, with loads of tips all along the way. Plus, I'll share tips for
+    storing and freezing potato salad. (Yes, you can freeze potato salad!)</p>
   <h2>Ingredients</h2>
   <ul>
     <li>5 potatoes</li>
@@ -40,6 +45,7 @@
   <h1>Crispy Baked Chicken Legs</h1>
   <img src="crispyBakedChickenLegs.jpeg" alt="Mouth watering crispy baked chicken legs" height="400" width="600">
   <h2>Description</h2>
+  <p>Crispy baked chicken legs inspired by my daughter, Ivy. This is fast and easy.</p>
   <h2>Ingredients</h2>
   <ul>
     <li>4 pounds chicken legs</li>
@@ -59,6 +65,7 @@
       45
       to 50 minutes. An instant-read thermometer inserted near the bone should read 165 degrees F (74 degrees C).</li>
   </ol>
+
 </body>
 
 </html>
