--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -65,7 +65,36 @@
       45
       to 50 minutes. An instant-read thermometer inserted near the bone should read 165 degrees F (74 degrees C).</li>
   </ol>
-
+  <h1>Creamy Au Gratin Potatoes</h1>
+  <img src="creamyAuGratinPotatoes.jpeg" alt="Tasty dish of creamy au gratin potatoes" height="500" width="600">
+  <h2>Description</h2>
+  <p>This is my husband's favorite dish, and he considers it a special occasion every time I make it. The creamy cheese
+    sauce and the tender potatoes in this classic French dish combine to make a deliciously addictive experience. It's a
+    great side dish with a roast pork loin or beef tenderloin. Add a green salad and French bread, and you have found
+    the magic path to a man's heart. To avoid lumps in your sauce, add the milk just a little at a time as you stir the
+    flour and butter. Experiment with different cheeses for variety.</p>
+  <h2>Ingredients</h2>
+  <ul>
+    <li>4 russet potatoes, sliced into &frac14; inch slices</li>
+    <li>1 onion, sliced into rings</li>
+    <li>salt and pepper to taste</li>
+    <li>3 tablespoons butter</li>
+    <li>3 tablespoons all-purpose flour</li>
+    <li>&frac12; teaspoon salt</li>
+    <li>2 cups milk</li>
+    <li>1&frac12; cups shredded Cheddar cheese</li>
+  </ul>
+  <h2>Steps</h2>
+  <ol>
+    <li>Preheat oven to 400 degrees F (200 degrees C). Butter a medium casserole dish.</li>
+    <li>Layer 1/2 of the potatoes into bottom of the prepared casserole dish. Top with the onion slices, and add the
+      remaining potatoes. Season with salt and pepper to taste.</li>
+    <li>In a medium-size saucepan, melt butter over medium heat. Mix in the flour and salt, and stir constantly with a
+      whisk for one minute. Stir in milk. Cook until mixture has thickened. Stir in cheese all at once, and continue
+      stirring until melted, about 30 to 60 seconds. Pour cheese over the potatoes, and cover the dish with aluminum
+      foil.</li>
+    <li>Bake 1&frac12; hours in the preheated oven.</li>
+  </ol>
 </body>
 
 </html>
