--- a/recipes/potatoSalad.html
+++ b/recipes/potatoSalad.html
@@ -12,6 +12,12 @@
   <h1>Old Fashioned Potato Salad</h1>
   <img src="potatoSalad.jpeg" alt="A delicious old fashioned potato salad" height="400" width="400">
   <h2>Description</h2>
+  <p>There are many ways to make potato salad, but if you're looking for a traditional, mayonnaise-based potato salad
+    made with hard-boiled eggs, celery, and a little pickle relish for zing, you've landed on the right recipe. With
+    more than one thousand ratings and nearly a thousand reviews from our Allrecipes community of home cooks, this
+    recipe for Old-Fashioned Potato salad is a proven winner. And it's so easy to make using everyday ingredients. I'll
+    show you how to make Old-Fashioned Potato salad, with loads of tips all along the way. Plus, I'll share tips for
+    storing and freezing potato salad. (Yes, you can freeze potato salad!)</p>
   <h2>Ingredients</h2>
   <ul>
     <li>5 potatoes</li>
@@ -35,28 +41,6 @@
     <li>Combine the potatoes, eggs, celery, onion, relish, mayonnaise, mustard, garlic salt, celery salt, and pepper
       in
       a large bowl. Mix together well and refrigerate until chilled.</li>
-  </ol>
-  <h1>Crispy Baked Chicken Legs</h1>
-  <img src="crispyBakedChickenLegs.jpeg" alt="Mouth watering crispy baked chicken legs" height="400" width="600">
-  <h2>Description</h2>
-  <h2>Ingredients</h2>
-  <ul>
-    <li>4 pounds chicken legs</li>
-    <li>2 tablespoons chili powder</li>
-    <li>1 tablespoon garlic powder</li>
-    <li>1 teaspoon cayenne pepper</li>
-    <li>1 teaspoon Himalayan pink salt</li>
-    <li>2 tablespoons tamari</li>
-  </ul>
-  <h2>Steps</h2>
-  <ol>
-    <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
-    <li>Place chicken legs in a large bowl. Spread chili powder, garlic powder, cayenne, and salt onto the chicken;
-      pour
-      sauce over top. Mix thoroughly and transfer to a baking sheet.</li>
-    <li>Bake, uncovered, in the preheated oven until chicken is no longer pink at the bone and the juices run clear,
-      45
-      to 50 minutes. An instant-read thermometer inserted near the bone should read 165 degrees F (74 degrees C).</li>
   </ol>
 </body>
 
