Structure and verify home page recipe links

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 
 <body>
   <h1>Odin Recipes</h1>
-  <a href="./recipes/potatoSalad.html">Old Fashioned Potato Salad</a>
+  <ul>
+    <li><a href="./recipes/potatoSalad.html">Old Fashioned Potato Salad</a></li>
+    <li><a href="./recipes/bakedChickenLegs.html">Crispy Baked Chicken Legs</a></li>
+    <li><a href="./recipes/creamyPotatoes.html">Creamy Au Gratin Potatoes</a></li>
+  </ul>
+
 </body>
 
 </html>
