--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Odin Recipes</title>
+    <link rel="stylesheet" href="/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Odin Recipes</title>
-</head>
-
-<body>
-  <h1>Odin Recipes</h1>
-  <ul>
-    <li><a href="./recipes/potatoSalad.html">Old Fashioned Potato Salad</a></li>
-    <li><a href="./recipes/bakedChickenLegs.html">Crispy Baked Chicken Legs</a></li>
-    <li><a href="./recipes/creamyPotatoes.html">Creamy Au Gratin Potatoes</a></li>
-  </ul>
-
-</body>
-
+  <body>
+    <h1 class="home-title">Odin Recipes</h1>
+    <ul class="home-content">
+      <li>
+        <a href="./recipes/potatoSalad.html">Old Fashioned Potato Salad</a>
+      </li>
+      <li>
+        <a href="./recipes/bakedChickenLegs.html">Crispy Baked Chicken Legs</a>
+      </li>
+      <li>
+        <a href="./recipes/creamyPotatoes.html">Creamy Au Gratin Potatoes</a>
+      </li>
+    </ul>
+  </body>
 </html>
