--- a/recipes/bakedChickenLegs.html
+++ b/recipes/bakedChickenLegs.html
@@ -1,37 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Crispy Baked Chicken Legs</title>
+    <link rel="stylesheet" href="/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Crispy Baked Chicken Legs</title>
-</head>
-
-<body>
-  <h1>Crispy Baked Chicken Legs</h1>
-  <img src="crispyBakedChickenLegs.jpeg" alt="Mouth watering crispy baked chicken legs" height="400" width="600">
-  <h2>Description</h2>
-  <p>Crispy baked chicken legs inspired by my daughter, Ivy. This is fast and easy.</p>
-  <h2>Ingredients</h2>
-  <ul>
-    <li>4 pounds chicken legs</li>
-    <li>2 tablespoons chili powder</li>
-    <li>1 tablespoon garlic powder</li>
-    <li>1 teaspoon cayenne pepper</li>
-    <li>1 teaspoon Himalayan pink salt</li>
-    <li>2 tablespoons tamari</li>
-  </ul>
-  <h2>Steps</h2>
-  <ol>
-    <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
-    <li>Place chicken legs in a large bowl. Spread chili powder, garlic powder, cayenne, and salt onto the chicken;
-      pour
-      sauce over top. Mix thoroughly and transfer to a baking sheet.</li>
-    <li>Bake, uncovered, in the preheated oven until chicken is no longer pink at the bone and the juices run clear,
-      45
-      to 50 minutes. An instant-read thermometer inserted near the bone should read 165 degrees F (74 degrees C).</li>
-  </ol>
-</body>
-
+  <body>
+    <h1 class="recipe-title">Crispy Baked Chicken Legs</h1>
+    <img
+      src="crispyBakedChickenLegs.jpeg"
+      alt="Mouth watering crispy baked chicken legs"
+    />
+    <h2>Description</h2>
+    <p class="recipe-content">
+      Crispy baked chicken legs inspired by my daughter, Ivy. This is fast and
+      easy.
+    </p>
+    <h2>Ingredients</h2>
+    <ul class="recipe-content">
+      <li>4 pounds chicken legs</li>
+      <li>2 tablespoons chili powder</li>
+      <li>1 tablespoon garlic powder</li>
+      <li>1 teaspoon cayenne pepper</li>
+      <li>1 teaspoon Himalayan pink salt</li>
+      <li>2 tablespoons tamari</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol class="recipe-content">
+      <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
+      <li>
+        Place chicken legs in a large bowl. Spread chili powder, garlic powder,
+        cayenne, and salt onto the chicken; pour sauce over top. Mix thoroughly
+        and transfer to a baking sheet.
+      </li>
+      <li>
+        Bake, uncovered, in the preheated oven until chicken is no longer pink
+        at the bone and the juices run clear, 45 to 50 minutes. An instant-read
+        thermometer inserted near the bone should read 165 degrees F (74 degrees
+        C).
+      </li>
+    </ol>
+  </body>
 </html>
