--- a/recipes/potatoSalad.html
+++ b/recipes/potatoSalad.html
@@ -1,47 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Old Fashioned Potato Salad</title>
+    <link rel="stylesheet" href="/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Old Fashioned Potato Salad</title>
-</head>
-
-<body>
-  <h1>Old Fashioned Potato Salad</h1>
-  <img src="potatoSalad.jpeg" alt="A delicious old fashioned potato salad" height="400" width="400">
-  <h2>Description</h2>
-  <p>There are many ways to make potato salad, but if you're looking for a traditional, mayonnaise-based potato salad
-    made with hard-boiled eggs, celery, and a little pickle relish for zing, you've landed on the right recipe. With
-    more than one thousand ratings and nearly a thousand reviews from our Allrecipes community of home cooks, this
-    recipe for Old-Fashioned Potato salad is a proven winner. And it's so easy to make using everyday ingredients. I'll
-    show you how to make Old-Fashioned Potato salad, with loads of tips all along the way. Plus, I'll share tips for
-    storing and freezing potato salad. (Yes, you can freeze potato salad!)</p>
-  <h2>Ingredients</h2>
-  <ul>
-    <li>5 potatoes</li>
-    <li>3 eggs</li>
-    <li>1 cup chopped celery</li>
-    <li>&frac12; chopped onion</li>
-    <li>&frac12; sweet pickle relish</li>
-    <li>&frac14; mayonnaise</li>
-    <li>1 tablespoon prepared mustard</li>
-    <li>&frac14; teaspoon garlic salt</li>
-    <li>&frac14; teaspoon celery salt</li>
-    <li>ground black pepper to taste</li>
-  </ul>
-  <h2>Steps</h2>
-  <ol>
-    <li>Bring a large pot of salted water to a boil. Add potatoes and cook until tender but still firm, about 15
-      minutes. Drain, cool, peel and chop.</li>
-    <li>While potatoes cook, place eggs in a saucepan and cover with cold water. Bring water to a boil; cover, remove
-      from heat, and let eggs stand in hot water for 10 to 12 minutes. Remove from hot water, cool, peel and chop.
-    </li>
-    <li>Combine the potatoes, eggs, celery, onion, relish, mayonnaise, mustard, garlic salt, celery salt, and pepper
-      in
-      a large bowl. Mix together well and refrigerate until chilled.</li>
-  </ol>
-</body>
-
+  <body>
+    <h1 class="recipe-title">Old Fashioned Potato Salad</h1>
+    <img src="potatoSalad.jpeg" alt="A delicious old fashioned potato salad" />
+    <h2>Description</h2>
+    <p class="recipe-content">
+      There are many ways to make potato salad, but if you're looking for a
+      traditional, mayonnaise-based potato salad made with hard-boiled eggs,
+      celery, and a little pickle relish for zing, you've landed on the right
+      recipe. With more than one thousand ratings and nearly a thousand reviews
+      from our Allrecipes community of home cooks, this recipe for Old-Fashioned
+      Potato salad is a proven winner. And it's so easy to make using everyday
+      ingredients. I'll show you how to make Old-Fashioned Potato salad, with
+      loads of tips all along the way. Plus, I'll share tips for storing and
+      freezing potato salad. (Yes, you can freeze potato salad!)
+    </p>
+    <h2>Ingredients</h2>
+    <ul class="recipe-content">
+      <li>5 potatoes</li>
+      <li>3 eggs</li>
+      <li>1 cup chopped celery</li>
+      <li>&frac12; chopped onion</li>
+      <li>&frac12; sweet pickle relish</li>
+      <li>&frac14; mayonnaise</li>
+      <li>1 tablespoon prepared mustard</li>
+      <li>&frac14; teaspoon garlic salt</li>
+      <li>&frac14; teaspoon celery salt</li>
+      <li>ground black pepper to taste</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol class="recipe-content">
+      <li>
+        Bring a large pot of salted water to a boil. Add potatoes and cook until
+        tender but still firm, about 15 minutes. Drain, cool, peel and chop.
+      </li>
+      <li>
+        While potatoes cook, place eggs in a saucepan and cover with cold water.
+        Bring water to a boil; cover, remove from heat, and let eggs stand in
+        hot water for 10 to 12 minutes. Remove from hot water, cool, peel and
+        chop.
+      </li>
+      <li>
+        Combine the potatoes, eggs, celery, onion, relish, mayonnaise, mustard,
+        garlic salt, celery salt, and pepper in a large bowl. Mix together well
+        and refrigerate until chilled.
+      </li>
+    </ol>
+  </body>
 </html>
